vcs/specs/parser/fail/syntax/unmatched_brace_open.vr
// @test: parse-fail
// @level: L0
// @tags: parser, syntax, braces, error
// @description: Test unmatched opening brace detection
// @expected-error: E011

fn test_unmatched() {
    if true {
        let x = 1;

}
